# checktrait

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust-publish.yml
src/: lib.rs
